--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ img{
 	background-color: var(--background-hero-color);
 	}
 
-.hero-background {
+.hero__background{
 	max-width: 1600px;
 	height: 600px;
 	margin-left: auto;
@@ -215,14 +215,15 @@ img{
 	url('../images/hero-image.jpg');
 	background-size: cover;
 	background-position: center;
+	background-color: var(--background-hero-color);
 }
 
-.hero-container{
+.hero__container{
 	padding-top: 200px;
 	padding-bottom: 200px;
 }
 
-.hero-title{
+.hero__title{
 	color: var(--main-white-color);
 	font-weight: 900;
 	font-size: 44px;
@@ -236,7 +237,7 @@ img{
 	width: 696px;
 	}
 	
-.hero-button{
+.hero__button{
 	color: var(--main-white-color);
 	background-color: var(--accent-color);
 	font-family: inherit;
@@ -262,8 +263,8 @@ img{
 	transition: background-color 250ms var(--timing-function);
 }
 
-.hero-button:hover,
-.hero-button:focus{
+.hero__button:hover,
+.hero__button:focus{
 	background-color: var(--secondary-accent-color);
 }
 
@@ -956,24 +957,21 @@ calc (100% - {	сумма зазоров в строке * значение ма
 	flex-wrap: wrap;
 	}
 
-.portfolio-card .title{
-	margin-bottom: 4px;
-}
-.portfolio-item{
+.portfolio-work__item{
 	width: 370px;
 	margin-right: 30px;
 	margin-bottom: 30px;
 }
 
-.portfolio-item:nth-child(3n) {
+.portfolio-work__item:nth-child(3n) {
 	margin-right: 0;
 }
 
-.portfolio-item:nth-last-child(-n+3){
+.portfolio-work__item:nth-last-child(-n+3){
 	margin-bottom: 0;
 }
 
-.portfolio-link {
+.portfolio-work__link {
 	text-decoration: none;
 	color: inherit;
 	display: block;
@@ -981,19 +979,19 @@ calc (100% - {	сумма зазоров в строке * значение ма
 	transition: box-shadow 250ms var(--timing-function);
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus{
+.portfolio-work__link:hover,
+.portfolio-work__link:focus{
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 			0px 4px 4px rgba(0, 0, 0, 0.06),
 			1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-link:hover .overlay,
-.portfolio-link:focus .overlay{
+.portfolio-work__link:hover .overlay,
+.portfolio-work__link:focus .overlay{
 		transform: translatey(-100%);
 }
 
-.portfolio-image{
+.portfolio-work__image{
 	position: relative;
 	overflow: hidden;
 }
@@ -1017,11 +1015,13 @@ calc (100% - {	сумма зазоров в строке * значение ма
 	transition: transform 250ms var(--timing-function);
 }
 
-.overlay-text{
+.overlay__text{
 	color: var(--main-white-color);
 	font-size: 18px;
 	line-height: 1.55;
 }
+
+/* portfolio card */
 
 .portfolio-card{
 	padding: 20px 24px;
@@ -1030,14 +1030,15 @@ calc (100% - {	сумма зазоров в строке * значение ма
 	border-bottom: 1px solid var(--border-color);
 }
 
-.portfolio-title{
+.portfolio-card__title{
 	font-weight: 700;
 	font-size: 18px;
 	line-height: 2;
 	letter-spacing: 0.06em;
+	margin-bottom: 4px;
 }
 
-.portfolio-text{
+.portfolio-card__subtitle{
 	color: var(--secondary-text-color);
 	font-size: 16px;
 	line-height: 1.88;
