--- a/css/styles.css
+++ b/css/styles.css
@@ -916,14 +916,15 @@ margin-bottom: 10px;
 
 /* portfolio */
 
-.filter-list{
+.filter{
 	justify-content: center;
 	gap: 8px;
 	display: flex;
 
 	margin-bottom: 50px;
 }
-.portfolio-button{
+
+.filter-button{
 	font-family: inherit;
 	font-weight: 500;
 	font-size: 16px;
@@ -940,8 +941,8 @@ margin-bottom: 10px;
 	transition: background-color 250ms var(--timing-function), color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
 }
 
-.portfolio-button:hover,
-.portfolio-button:focus{
+.filter-button:hover,
+.filter-button:focus{
 	color: var(--main-white-color);
 	background-color: var(--accent-color);
 
