--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,14 @@ img{
 	padding-top: 94px;
 }
 
+.title {
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.16;
+	text-align: center;
+	margin-bottom: 50px;
+}
+
 /* header */
 .page-header{
 	border-bottom: 1px solid var(--border-color);
@@ -120,25 +128,12 @@ img{
 
 /* navigation */
 
-.site-nav {
+.header-nav {
 	display: flex;
 	align-items: center;
 }
 
-.nav-link {
-	position: relative;
-
-	display: block;
-	padding-top: 32px;
-	padding-bottom: 32px;
-}
-
-.nav-item+.nav-item {
-	display: flex;
-	margin-left: 50px;
-}
-
-.header-list {
+.header-nav__list {
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 1.14;
@@ -148,13 +143,27 @@ img{
 	margin-left: 93px;
 }
 
-.current {
+.header-nav__link {
+	position: relative;
+
+	display: block;
+	padding-top: 32px;
+	padding-bottom: 32px;
+}
+
+.header-nav__item+.header-nav__item {
+	display: flex;
+	margin-left: 50px;
+}
+
+
+.header-nav__link--current {
 	color: var(--accent-color);
 }
 
 /*підкреслення посилання поточної сторінки через ::after та позиціювання  (position: relative; 	position: absolute;)*/
 
-.nav-link.current::after{
+.header-nav__link--current::after{
 	position: absolute;
 	content: '';
 	bottom: -1px;
@@ -181,23 +190,17 @@ img{
 	align-items: center;
 }
 
-.address-item + .address-item{
+.header-address__item + .header-address__item{
 	margin-left: 50px;
 }
 
-.address-link{
+.header-address__link{
 	display: flex;
 	fill: currentColor;
 	align-items: center;
 	gap: 10px;
 }
 
-.phone-link{
-	display: flex;
-	fill: currentColor;
-	align-items: center;
-	gap: 10px;
-}
 
 /* Hero */
 .hero{
@@ -300,7 +303,7 @@ transition: opacity 250ms var(--timing-function);
 	position: absolute;
 	top: 50%;
 	left: 50%;
-		
+	
 	width: 528px;
 	
 	padding: 40px;
@@ -331,18 +334,18 @@ transition: opacity 250ms var(--timing-function);
 	cursor: pointer;
 }
 
-.close-icon {
+.modal-button__icon {
 	fill: currentColor;
 	transition: fill 250ms var(--timing-function);
 }
 
-.modal-button:hover .close-icon{
+.modal-button:hover .modal-button__icon{
 	fill: var(--accent-color)
 }
 
 	/* signup-form */
 
-.form-title{
+.modal-form__title{
 		
 	font-weight: 700;
 	font-size: 20px;
@@ -353,7 +356,8 @@ transition: opacity 250ms var(--timing-function);
 	margin-bottom: 20px;
 }
 
-.form-label{
+
+.modal-form__label{
 	color: var(--secondary-text-color);
 	font-size: 12px;
 	line-height: 1.16;
@@ -362,29 +366,18 @@ transition: opacity 250ms var(--timing-function);
 	margin-bottom: 4px;
 }
 
-.form-thumb{
+.modal-form__thumb{
 position: relative;
 margin-bottom: 10px;
 
 transition: fill 250ms var(--timing-function);
 }
 
-.form-thumb:hover {
+.modal-form__thumb:hover {
 	fill: var(--accent-color);
 }
 
-.form-icon{
-	position: absolute;
-	width: 18px;
-	height: 18px;
-	top: 50%;
-	left: 12px;
-	transform: translateY(-50%);
-
-	transition: fill 250ms var(--timing-function) ;
-}
-
-.form-input{
+.modal-form__input{
 	width: 100%;
 	height: 40px;
 	padding: 12px 12px 12px 42px ;
@@ -406,17 +399,28 @@ transition: fill 250ms var(--timing-function);
 	transition: border 250ms var(--timing-function);
 }
 
-.form-input,
-.form-input:focus~.form-icon {
+.modal-form__input,
+.modal-form__input:focus~.modal-form__icon{
 	fill: var(--accent-color);
 }
 
-.form-input:hover,
-.form-input:focus{
+.modal-form__input:hover,
+.modal-form__input:focus{
 	border: 1px solid var(--accent-color);
 }
 
-.form-comment{
+.modal-form__icon{
+	position: absolute;
+	width: 18px;
+	height: 18px;
+	top: 50%;
+	left: 12px;
+	transform: translateY(-50%);
+
+	transition: fill 250ms var(--timing-function);
+}
+
+.modal-form__comment{
 	width: 100%;
 	height: 120px;
 	resize: none;
@@ -451,11 +455,11 @@ transition: fill 250ms var(--timing-function);
 
 /* Checkbox  */
 
-.checkbox-input {
+.checkbox__input {
 	appearance: none;
 }
 
-.checkbox-label {
+.checkbox__label {
 	color: var(--secondary-text-color);
 	line-height: 1.71;
 	cursor: pointer;
@@ -470,11 +474,11 @@ transition: fill 250ms var(--timing-function);
 	margin-bottom: 30px;
 }
 
-.checkbox-label {
+.checkbox__label {
 	padding-left: 36px;
 }
 
-.checkbox-icon {
+.checkbox__icon {
 	content: "";
 	position: absolute;
 	z-index: -1;
@@ -492,7 +496,7 @@ transition: fill 250ms var(--timing-function);
 	fill-opacity 250ms var(--timing-function);
 }
 
-.checkbox-input:checked+.checkbox-icon {
+.checkbox__input:checked+.checkbox__icon {
 	background-color: var(--accent-color);
 	border-color: var(--accent-color);
 	border: none;
@@ -503,7 +507,7 @@ transition: fill 250ms var(--timing-function);
 /* --- --------------------------------------------*/
 
 
-.form-button{
+.modal-form__button{
 		color: var(--main-white-color);
 		background-color: var(--accent-color);
 		font-family: inherit;
@@ -528,8 +532,8 @@ transition: fill 250ms var(--timing-function);
 		transition: background-color 250ms var(--timing-function);
 }
 
-.form-button:hover,
-.form-button:focus{
+.modal-form__button:hover,
+.modal-form__button:focus{
 	background: var(--secondary-accent-color);
 	}
 
@@ -540,22 +544,21 @@ transition: fill 250ms var(--timing-function);
 
 
 
-.features-list{
+.features{
 	display: flex;
-	
-	}
+}
 
-.features-item{
+.features__item{
 	width: 270px;
 	margin-right: 30px;
 
 }
 
-.features-item:last-child{
+.features__item:last-child{
 	margin-right: 0;
 }
 
-.features-rectangle{
+.features__rectangle{
 	width: 270px;
 	height: 120px;
 	background-color: var(--team-background-color);
@@ -565,14 +568,14 @@ transition: fill 250ms var(--timing-function);
 	margin-bottom: 30px;
 }
 
-.features-title{
+.features__title{
 	font-weight: 700;
 	font-size: 14px;
 	line-height: 1.14;
 	text-transform: uppercase;
 }
 
-.features-text{
+.features__text{
 	color: var(--secondary-text-color);
 	margin-top: 10px;
 	line-height: 1.71;
@@ -585,31 +588,25 @@ transition: fill 250ms var(--timing-function);
 	padding-top: 0;
 }
 
-.title{
-	font-weight: 700;
-	font-size: 36px;
-	line-height: 1.16;
-	text-align: center;
-}
 
-.technology-list{
+
+.technology{
 	display: flex;
-	margin-top: 50px;
 }
 
-.technology-item{
+.technology__item{
 	margin-right: 30px;
 }
 
-.technology-item:last-child{
+.technology__item:last-child{
 	margin-right: 0;
 }
 
-.technology-thumb{
+.technology__thumb{
 	position: relative;
 }
 
-.technology-text{
+.technology__text{
 	position: absolute;
 	bottom: 0;
 	width:100%;
@@ -631,16 +628,12 @@ transition: fill 250ms var(--timing-function);
 	background-color:var(--team-background-color);
 }
 
-.team-title{
-margin-bottom: 50px;
-}
-
 .team-list{
 	display: flex;
 	
 }
 
-.team-item {
+.team-list__item {
 	background-color: var(--main-white-color);
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
@@ -649,16 +642,16 @@ margin-bottom: 50px;
 	margin-right: 30px;
 }
 
-.team-item:last-child{
+.team-list__item:last-child{
 	margin-right: 0;
 }
 
-.team-card {
+.team-list__header {
 	padding-top: 30px;
 	padding-bottom: 16px;
 }
 
-.team-name{
+.team-list__name{
 font-weight: 500;
 font-size: 16px;
 line-height: 1.19;
@@ -667,7 +660,7 @@ text-align: center;
 margin-bottom: 10px;
 }
 
-.team-position{
+.team-list__position{
 	color: var(--secondary-text-color);
 	font-size: 16px;
 	line-height: 1.19;
@@ -675,7 +668,7 @@ margin-bottom: 10px;
 }
 
 
-.social-list {
+.social-list{
 	display: flex;
 	justify-content: center;
 	gap: 10px;
@@ -683,7 +676,7 @@ margin-bottom: 10px;
 }
 
 
-.social-link {
+.social-list__link{
 	width: 44px;
 	height: 44px;
 	display: flex;
@@ -694,20 +687,22 @@ margin-bottom: 10px;
 	transition: background-color 250ms var(--timing-function);
 }
 
-.social-link:hover,
-.social-link:focus{
+.social-list__link:hover,
+.social-list__link:focus{
 	background-color: var(--accent-color);
 }
 
-.social-icon{
+
+
+.social-link:hover .social-list__icon,
+.social-link:focus .social-list__icon{
+	fill: var(--main-white-color);
+}
+
+.social-list__icon{
 	fill: var(--icons-color);
 
 	transition: fill 250ms var(--timing-function);
-}
-
-.social-link:hover .social-icon,
-.social-link:focus .social-icon{
-	fill: var(--main-white-color);
 }
 
 /* CUSTOMERS */
@@ -764,14 +759,14 @@ margin-bottom: 10px;
 	justify-content:space-between;
 }
 
-.footer-address__logo{
+.logo__footer{
 	color: var(--main-white-color);
 
 	transition: color 250ms var(--timing-function);
 }
 
-.footer-address__logo:hover,
-.footer-address__logo:focus{
+.logo__footer:hover,
+.logo__footer:focus{
 	color: var(--accent-color);
 }
 
