--- a/sass/base/_global-styles.scss
+++ b/sass/base/_global-styles.scss
@@ -2,7 +2,7 @@ body {
 	color: var(--primery-text-color);
 	background-color: var(--main-white-color);
 	font-size: 14px;
-	font-family: 'Roboto', sans-serif;
+	font-family: var(--main-font);
 	letter-spacing: 0.03em;
 	}
 
