--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,4 +12,7 @@
 	--background-hero-color: #C4C4C4;
 	--icons-color: #AFB1B8;
 	--timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	--main-font: 'Roboto', sans-serif;
+	--logo-font: 'Raleway', sans-serif;
 }
