--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,48 +1,6 @@
 // Modal 
 
-.backdrop {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 1;
-
-	width: 100%;
-	height: 100%;
-
-	background-color: rgba(0, 0, 0, 0.2);
-
-	opacity: 1;
-	transition: opacity 250ms var(--timing-function);
-
-}
-
-.backdrop.is-hidden {
-	opacity: 0;
-	pointer-events: none;
-	/* visibility: hidden; ? */
-}
-
-.backdrop.is-hidden .modal {
-	transform: scale(0.5) translate(-50%, -50%);
-}
-
-.modal {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-
-	width: 528px;
-
-	padding: 40px;
-
-	background-color: var(--main-white-color);
-
-	transform: scale(1) translate(-50%, -50%);
-
-	transition: transform 250ms var(--timing-function);
-}
-
-.modal-button {
+.close-button {
 	width: 30px;
 	height: 30px;
 
@@ -59,208 +17,239 @@
 	right: 8px;
 
 	cursor: pointer;
+
+	&__icon {
+		fill: currentColor;
+		transition: fill 250ms var(--timing-function);
+
+		.close-button:hover &,
+		.close-button:focus & {
+			fill: var(--accent-color);
+		}
+	}
 }
 
-.modal-button__icon {
-	fill: currentColor;
-	transition: fill 250ms var(--timing-function);
-}
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
 
-.modal-button:hover .modal-button__icon {
-	fill: var(--accent-color)
-}
-
-/* signup-form */
-
-.modal-form__title {
-
-	font-weight: 700;
-	font-size: 20px;
-	line-height: 1.15;
-
-	text-align: center;
-
-	margin-bottom: 20px;
-}
-
-
-.modal-form__label {
-	color: var(--secondary-text-color);
-	font-size: 12px;
-	line-height: 1.16;
-	letter-spacing: 0.01em;
-	display: block;
-	margin-bottom: 4px;
-}
-
-.modal-form__thumb {
-	position: relative;
-	margin-bottom: 10px;
-
-	transition: fill 250ms var(--timing-function);
-}
-
-.modal-form__thumb:hover {
-	fill: var(--accent-color);
-}
-
-.modal-form__input {
 	width: 100%;
-	height: 40px;
-	padding: 12px 12px 12px 42px;
-	outline: none;
+	height: 100%;
 
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 1.16;
-	letter-spacing: 0.01em;
+	background-color: rgba(0, 0, 0, 0.2);
 
-	color: var(--primery-text-color);
+	opacity: 1;
+	transition: opacity 250ms var(--timing-function);
 
-	border: 1px solid rgba(33, 33, 33, 0.2);
-	border-radius: 4px;
-	cursor: pointer;
-
-	transition: border 250ms var(--timing-function);
+	&.is-hidden {
+		opacity: 0;
+		pointer-events: none;
+	
+			& .modal {
+				transform: scale(0.5) translate(-50%, -50%);
+			}
+		}
 }
 
-.modal-form__input,
-.modal-form__input:focus~.modal-form__icon {
-	fill: var(--accent-color);
-}
-
-.modal-form__input:hover,
-.modal-form__input:focus {
-	border: 1px solid var(--accent-color);
-}
-
-.modal-form__icon {
+.modal {
 	position: absolute;
-	width: 18px;
-	height: 18px;
 	top: 50%;
-	left: 12px;
-	transform: translateY(-50%);
+	left: 50%;
 
-	transition: fill 250ms var(--timing-function);
+	width: 528px;
+
+	padding: 40px;
+
+	background-color: var(--main-white-color);
+
+	transform: scale(1) translate(-50%, -50%);
+
+	transition: transform 250ms var(--timing-function);
+
+	&__title {
+	
+			font-weight: 700;
+			font-size: 20px;
+			line-height: 1.15;
+	
+			text-align: center;
+	
+			margin-bottom: 20px;
+		}
+	
+	
+		&__label {
+			color: var(--secondary-text-color);
+			font-size: 12px;
+			line-height: 1.16;
+			letter-spacing: 0.01em;
+			display: block;
+			margin-bottom: 4px;
+		}
+	
+		&__thumb {
+			position: relative;
+			margin-bottom: 10px;
+	
+			transition: fill 250ms var(--timing-function);
+				&:hover {
+				fill: var(--accent-color);
+				}
+			}
+		&__input {
+			width: 100%;
+			height: 40px;
+			padding: 12px 12px 12px 42px;
+			outline: none;
+
+			// font-family: 'Roboto';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 12px;
+			line-height: 1.16;
+			letter-spacing: 0.01em;
+
+			color: var(--primery-text-color);
+
+			border: 1px solid rgba(33, 33, 33, 0.2);
+			border-radius: 4px;
+			cursor: pointer;
+
+			transition: border 250ms var(--timing-function);
+
+				&:hover,
+				&:focus {
+					border: 1px solid var(--accent-color);
+				}
+		}
+		&__icon {
+			position: absolute;
+			width: 18px;
+			height: 18px;
+			top: 50%;
+			left: 12px;
+			transform: translateY(-50%);
+		
+			transition: fill 250ms var(--timing-function);
+
+			.modal__input:focus ~ &{
+				fill: var(--accent-color);
+			}
+		}
+
+		&__comment {
+			width: 100%;
+			height: 120px;
+			resize: none;
+			padding: 12px 16px;
+
+			margin-bottom: 20px;
+			outline: none;
+
+			font-family: 'Roboto';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 12px;
+			line-height: 1.16;
+			letter-spacing: 0.01em;
+
+			color: var(--primery-text-color);
+
+			border: 1px solid rgba(33, 33, 33, 0.2);
+			border-radius: 4px;
+
+				&::placeholder{
+					font-family: 'Roboto';
+					font-style: normal;
+					font-weight: 400;
+					font-size: 12px;
+					line-height: 1.16;
+					letter-spacing: 0.01em;
+
+					color: rgba(117, 117, 117, 0.5);
+				}
+		}
+
+		&__button {
+			color: var(--main-white-color);
+			background-color: var(--accent-color);
+			font-family: inherit;
+			font-weight: 700;
+			font-size: 16px;
+			line-height: 1.87;
+			font-style: normal;
+			cursor: pointer;
+			letter-spacing: 0.06em;
+		
+			padding: 10px 52px;
+			text-align: center;
+			display: flex;
+			align-items: center;
+		
+			border-radius: 4px;
+			border: 0;
+			box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+			margin-left: auto;
+			margin-right: auto;
+		
+			transition: background-color 250ms var(--timing-function);
+		
+				&:hover,
+				&:focus {
+					background: var(--secondary-accent-color);
+					outline: none;
+				}
+		}
 }
 
-.modal-form__comment {
-	width: 100%;
-	height: 120px;
-	resize: none;
-	padding: 12px 16px;
 
-	margin-bottom: 20px;
-	outline: none;
-
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 1.16;
-	letter-spacing: 0.01em;
-
-	color: var(--primery-text-color);
-
-	border: 1px solid rgba(33, 33, 33, 0.2);
-	border-radius: 4px;
-}
-
-.form-comment::placeholder {
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 1.16;
-	letter-spacing: 0.01em;
-
-	color: rgba(117, 117, 117, 0.5);
-}
-
-/* Checkbox  */
-
-.checkbox__input {
-	appearance: none;
-}
-
-.checkbox__label {
-	color: var(--secondary-text-color);
-	line-height: 1.71;
-	cursor: pointer;
-}
-
-.terms-link {
-	color: var(--accent-color);
-}
+// Checkbox
 
 .checkbox {
 	position: relative;
 	margin-bottom: 30px;
-}
 
-.checkbox__label {
-	padding-left: 36px;
-}
+		&__input {
+			appearance: none;
+		}
 
-.checkbox__icon {
-	content: "";
-	position: absolute;
-	z-index: -1;
-	fill: var(--main-white-color);
-	fill-opacity: 0;
-	top: 50%;
-	left: 13px;
-	transform: translateY(-50%);
-	width: 16px;
-	height: 15px;
-	border: 2px solid var(--primery-text-color);
-	border-radius: 2px;
+		&__icon {
+			content: "";
+			position: absolute;
+			z-index: -1;
+			fill: var(--main-white-color);
+			fill-opacity: 0;
+			top: 50%;
+			left: 13px;
+			transform: translateY(-50%);
+			width: 16px;
+			height: 15px;
+			border: 2px solid var(--primery-text-color);
+			border-radius: 2px;
 
-	transition: background-color 250ms var(--timing-function),
-		fill-opacity 250ms var(--timing-function);
-}
+			transition: background-color 250ms var(--timing-function),
+			fill-opacity 250ms var(--timing-function);
+				
+			.checkbox__input:checked+ & {
+						background-color: var(--accent-color);
+						border-color: var(--accent-color);
+						border: none;
+						fill: var(--main-white-color);
+						fill-opacity: 1;
+					}
+	}
 
-.checkbox__input:checked+.checkbox__icon {
-	background-color: var(--accent-color);
-	border-color: var(--accent-color);
-	border: none;
-	fill: var(--main-white-color);
-	fill-opacity: 1;
-}
-
-/* --- --------------------------------------------*/
-
-
-.modal-form__button {
-	color: var(--main-white-color);
-	background-color: var(--accent-color);
-	font-family: inherit;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 1.87;
-	font-style: normal;
-	cursor: pointer;
-	letter-spacing: 0.06em;
-
-	padding: 10px 52px;
-	text-align: center;
-	display: flex;
-	align-items: center;
-
-	border-radius: 4px;
-	border: 0;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-	margin-left: auto;
-	margin-right: auto;
-
-	transition: background-color 250ms var(--timing-function);
-}
-
-.modal-form__button:hover,
-.modal-form__button:focus {
-	background: var(--secondary-accent-color);
-	outline: none;
+		&__label {
+			color: var(--secondary-text-color);
+			line-height: 1.71;
+			cursor: pointer;
+	
+			padding-left: 36px;
+	
+			&--blue {
+				color: var(--accent-color);
+			}
+		}
 }
