--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,7 +2,7 @@
 
 .logo{
 	color: var(--accent-color);
-	font-family: 'Raleway', sans-serif;
+	font-family: var(--logo-font);
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.19;
