--- a/css/main.css
+++ b/css/main.css
@@ -670,6 +670,7 @@ img {
   height: 40px;
   padding: 12px 12px 12px 42px;
   outline: none;
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
