--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -104,7 +104,7 @@
 			padding: 12px 12px 12px 42px;
 			outline: none;
 
-			// font-family: 'Roboto';
+			font-family: 'Roboto';
 			font-style: normal;
 			font-weight: 400;
 			font-size: 12px;
