--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -41,13 +41,15 @@
 	background-color: rgba(0, 0, 0, 0.2);
 
 	opacity: 1;
+	
 	transition: opacity 250ms var(--timing-function);
 
 	&.is-hidden {
 		opacity: 0;
 		pointer-events: none;
-		
-			& .modal {
+		visibility: hidden;
+			
+		& .modal {
 				transform: scale(0.5) translate(-50%, -50%);
 			}
 		}
@@ -132,7 +134,7 @@
 			left: 12px;
 			transform: translateY(-50%);
 		
-			transition: fill 250ms var(--timing-function);
+			transition: fill 10ms var(--timing-function);
 
 			.modal__input:focus ~ &{
 				fill: var(--accent-color);
